--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -59,7 +59,7 @@
 
 
                 <div class="form-group row">
-                    <div class="offset-sm-2">
+                    <div class="offset-lg-3 offset-sm-2">
 
                         <button type="submit" class="btn bg-danger text-white">Save</button>
 
