--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -25,7 +25,7 @@
       <div class="col-sm-8">
         <input type="text" ngModel name="fullname" #fullname="ngModel" class="form-control" id="inputname"
           placeholder="First name and Last name" required>
-        <div class="text-danger" *ngIf="fullname.touched && fullname.invalid">
+        <div class="text-danger" *ngIf="form.submitted || fullname.touched && fullname.invalid">
           <div *ngIf="fullname.errors['required']">
             Full Name is required
           </div>
@@ -41,7 +41,7 @@
       <div class="col-sm-8">
         <input type="text" ngModel name="number" #number="ngModel" class="form-control" id="inputmobile"
           placeholder="Mobile Number" required minlength="11" maxlength="11">
-        <div class="text-danger" *ngIf="number.touched && number.invalid">
+        <div class="text-danger" *ngIf="form.submitted || number.touched && number.invalid">
           <div *ngIf="number.errors['required']"> Mobile Number is required</div>
           <div *ngIf="number.errors['minlength']"> Invalid Mobile Number</div>
           <div *ngIf="number.errors['maxlength']"> Invalid Mobile Number</div>
@@ -56,12 +56,13 @@
         </label>
       <div class="col-sm-8">
         <input type="email" ngModel name="email" #email="ngModel" class="form-control" id="inputemail"
-          placeholder="example@domain.com" required>
-        <div class="text-danger" *ngIf='email.touched && email.invalid'>
+          placeholder="example@domain.com" required [pattern]="emailRegex">
+        <div class="text-danger" *ngIf='form.submitted || email.touched && email.invalid'>
           <div *ngIf="email.errors['required']"> Email Address is required</div>
+          <div *ngIf="email.errors['pattern']">Invalid Email Address</div>
         </div>
       </div>
-    </div>
+    </div> <!-- email -->
     <div class="form-group row">
       <label for="inputPassword3" class="col-sm-4 col-form-label">
           Password
@@ -70,23 +71,23 @@
       <div class="col-sm-8">
         <input type="password" ngModel name="password" #password="ngModel" class="form-control" id="inputPassword3"
           placeholder="Password" required>
-        <div class="text-danger" *ngIf='password.touched && password.invalid'>
+        <div class="text-danger" *ngIf='form.submitted || password.touched && password.invalid'>
           <div *ngIf="password.errors['required']"> Password is required</div>
         </div>
       </div>
-    </div>
+    </div> <!-- password -->
     <div class="form-group row">
         <div class=col-sm-4></div>
       <div class="col-sm-8">
-        <button type="submit" class="btn btn-danger" value="join" (click)="join()" [disabled]="form.invalid">
+        <button type="submit" class="btn btn-danger" value="join" (click)="join()" >
             Join Now
         </button>
       </div>
-    </div>
+    </div> <!-- submit-->
     <hr class="hr-text">
     <div class="text-center d-flex justify-content-center">
         <p class="text-muted mr-2">Already Registered in VetZone ?</p>
-       <a [routerLink]="['']" >login</a>
+       <a [routerLink]="'/Clogin'" >login</a>
         
     </div>
 
