--- a/src/app/sign-up/sign-up.component.css
+++ b/src/app/sign-up/sign-up.component.css
@@ -1,46 +1,64 @@
+    .card {
+        border-radius: 10px;
+    }
 
-.card{
-    border-radius: 10px;
-}
-.btn-facebook, .btn-facebook:active,
- .btn-facebook:focus, .btn-facebook:hover{
-    background-color: #2B4B90;
-    color: #fff;
-    border-radius: 5px;
-    outline: 0 !important;
-    font-size: 16px;
-}
-.hr-text {
-    line-height: 1em;
-    position: relative;
-    outline: 0;
-    border: 0;
-    color: black;
-    text-align: center;
-    height: 1.5em;
-   }
+    .btn-facebook,
+    .btn-facebook:active,
+    .btn-facebook:focus,
+    .btn-facebook:hover {
+        background-color: #2B4B90;
+        color: #fff;
+        border-radius: 5px;
+        outline: 0 !important;
+        font-size: 16px;
+        width: 300px;
+        position: relative;
+    }
+
+    button i {
+        position: absolute;
+        left: 10px;
+        font-size: 20px;
+        top: 10px;
+        padding-right: 10px;
+        border-right: 2px solid rgba(255, 255, 255, .2);
+    }
+
+    .hr-text {
+        line-height: 1em;
+        position: relative;
+        outline: 0;
+        border: 0;
+        color: black;
+        text-align: center;
+        height: 1.5em;
+    }
+
     .hr-text:before {
-      content: '';
-      background: linear-gradient(to right, transparent, #818078, transparent);
-      position: absolute;
-      left: 0;
-      top: 50%;
-      width: 100%;
-      height: 1px;
+        content: '';
+        background: linear-gradient(to right, transparent, #818078, transparent);
+        position: absolute;
+        left: 0;
+        top: 50%;
+        width: 100%;
+        height: 1px;
     }
-    .hr-text:after {
-      content: attr(data-content);
-      position: relative;
-      display: inline-block;
-      color: black;
-      padding: 0 .5em; 
-      line-height: 1.5em;
-      color: #818078;
-      background-color: #fcfcfa;
-    }
-    .form-control.ng-touched.ng-invalid{
-        border:1px solid red;
-    }
-   *:focus{ outline: none } 
 
-    
+    .hr-text:after {
+        content: attr(data-content);
+        position: relative;
+        display: inline-block;
+        color: black;
+        padding: 0 .5em;
+        line-height: 1.5em;
+        color: #818078;
+        background-color: #fcfcfa;
+    }
+
+    .form-control.ng-touched.ng-invalid {
+        border: 1px solid red;
+    }
+
+    *:focus {
+        outline: none
+    }
