--- a/src/app/clogin/clogin.component.html
+++ b/src/app/clogin/clogin.component.html
@@ -1,28 +1,43 @@
-<div class="container">
-  <form #myform="ngForm" (ngSubmit)="onSubmit(myform)">
-    <div class="form-group row">
-      <label for="username" class="col-sm-1-12 col-form-label">User Name : </label>
-      <div class="col-sm-1-12">
-        <input type="text" class="form-control" name="username" id="username" placeholder="User Name"
-         #username="ngModel" [(ngModel)]="userinfo.username" required minlength="5">
-         pristin : {{username.pristine}} valid : {{username.valid}}  touched :{{username.touched}}
-      </div>
-      <div class="alert alert-danger" *ngIf="username.invalid && username.touched && username.errors['required'] "> username is required</div>
-      <div class="alert alert-danger" *ngIf="username.invalid && username.touched && username.errors['minlength']"> minlength is {{username.errors['minlength']['requiredLength']}}</div>
-    </div>
-    <div class="form-group row">
-      <label for="password" class="col-sm-1-12 col-form-label">Password : </label>
-      <div class="col-sm-1-12">
-        <input type="password" class="form-control" name="password" id="password" placeholder="Password"
-         #password="ngModel" [(ngModel)]="userinfo.password" required>
+<p class="alert alert-danger" *ngIf="isvalid">error</p>
+<p class="alert alert-danger" *ngIf="password.invalid && password.touched"> password is required</p>
+<p class="alert alert-danger" *ngIf="username.invalid && username.touched && username.errors['required'] "> username is required</p>
+<p class="alert alert-danger" *ngIf="username.invalid && username.touched && username.errors['minlength']"> minlength is {{username.errors['minlength']['requiredLength']}}</p>
+<div class="card">
+  <div class="container">
+    <h4 class="card-title">Log In</h4>
+    <form #myform="ngForm" (ngSubmit)="onSubmit(myform)">
+      <div class="form-group row">
+        <label for="username" class="col-sm-1-12 col-form-label">User Name </label>
+        <div class="col-sm-1-12">
+          <input type="text" class="form-control" name="username" id="username" placeholder="User Name"
+           #username="ngModel" [(ngModel)]="userinfo.username" required minlength="5">
         </div>
-        <div class="alert alert-danger" *ngIf="password.invalid && password.touched"> password is required</div>
-    </div>
-    <div class="form-group row">
-      <div class="offset-sm-2 col-sm-10">
-        <button type="submit" class="btn btn-primary" [disabled]="myform.invalid">Sign In</button>
       </div>
-      <div class="alert alert-danger" *ngIf="isvalid">error</div>
-    </div>
-  </form>
+      <div class="form-group row">
+        <label for="password" class="col-sm-1-12 col-form-label">Password </label>
+        <div class="col-sm-1-12">
+          <input type="password" class="form-control" name="password" id="password" placeholder="Password"
+           #password="ngModel" [(ngModel)]="userinfo.password" required>
+          </div>
+      </div>
+      <div class="form-group row">
+        <div class="col-sm-1-12">
+            <div class="custom-control custom-checkbox">
+                <input type="checkbox" class="custom-control-input" id="customCheck1">
+                <label class="custom-control-label" for="customCheck1">Remember Me</label>
+            </div>
+        </div>
+      </div>
+      <div class="form-group row">
+          <div class="col-sm-1-12">
+            <p class='signpara'>If you don't have an account , click <a class='signlink'[routerLink]="['/csignup']">Sign Up</a></p>
+          </div>
+      </div>
+      <div class="form-group row">
+        <div class="offset-sm-2 col-sm-10">
+          <button type="submit" class="btn" [disabled]="myform.invalid">Sign In</button>
+        </div>
+      </div>
+    </form>
+  </div>
 </div>
