updated commit on the whole project

--- a/src/app/core/navbar/navbar.component.html
+++ b/src/app/core/navbar/navbar.component.html
@@ -8,12 +8,12 @@
         <ul class="navbar-nav mr-auto">
 
             <li class="nav-item">
-                <a class="nav-link text-light" routerLink="/Clogin">Login</a>
+                <a class="nav-link text-light" routerLink="/clogin">Login</a>
             </li>
 
 
             <li class="nav-item">
-                <a class="nav-link text-light" routerLink='/signup'>Sign Up</a>
+                <a class="nav-link text-light" routerLink='/csignup'>Sign Up</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link text-light" routerLink="/info/aboutus">About Us</a>
