--- a/src/app/clogin/clogin.component.html
+++ b/src/app/clogin/clogin.component.html
@@ -31,6 +31,13 @@
           </div>
       </div>
       <div class="form-group row">
+          <div class="text-center">
+              <button class="btn btn-lg btn-facebook text-center mb-3 ">
+                  <i class="fa fa-facebook"></i><span>  </span>  Connect with Facebook
+              </button>
+          </div>
+      </div>
+      <div class="form-group row">
         <div class="offset-sm-2 col-sm-10">
           <button type="submit" class="btn" [disabled]="myform.invalid">Sign In</button>
         </div>
