--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -17,7 +17,7 @@
                 </div>
                 <div class="form-group row">
                     <label for="inputname" class="col-sm-4 col-form-label">
-        Your NameSSSSSSS
+        Your Name
         <sup class="text-danger">*</sup>
       </label>
 
