--- a/src/app/clogin/clogin.component.css
+++ b/src/app/clogin/clogin.component.css
@@ -7,9 +7,11 @@
   width: 600px;
   height: auto;
   box-sizing: border-box;
-  position: block;
-  margin: 50px 400px auto 400px;
+  position: relative;
+  display: block;
+  margin: 50px auto;
   color: fuchsia;
+  box-shadow: 2px 2px rgb(209, 209, 209);
   background-color: blueviolet
 }
 
@@ -32,10 +34,22 @@
   padding: 50px 75px 30px 75px
 }
 
+.card .container form label{
+  width: 130px
+}
+
 .card .container form input{
-  margin: 0 20px;
+  margin: 0 10px;
   height: 30px;
-  width: 140%
+  width: 150%
+}
+
+.card .container form input[type=text]{
+  color: fuchsia
+}
+
+.card .container form input[type=password]{
+  color: gold
 }
 
 .custom-control-label{
@@ -43,7 +57,7 @@
 }
 
 .col-sm-1-12{
-  width: 300px
+  width: 200px
 }
 
 button{
@@ -52,7 +66,7 @@ button{
   border-radius: 30px 30px;
   margin-left: 30%;
   margin-bottom: 0 auto;
-  background-color: gold;
+  background-color: fuchsia;
   color: blueviolet
 }
 
@@ -62,7 +76,7 @@ button{
 }
 
 .signlink{
-  color: gold;
+  color: fuchsia;
   text-decoration: none
 }
 
