--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -1,101 +1,112 @@
 <div class=" mt-5 col-lg-6 col-md-8 col-sm-10 offset-lg-3 offset-md-2 offset-sm-1   ">
-    <div class="card">
-   
-  <div class="card-header bg-primary text-center text-white mb-3">
-        Sign Up
+  <div class="card">
+
+    <div class="card-header bg-primary text-center text-white mb-3">
+      Sign Up
     </div>
     <div class=card-body>
-  <form action="" #form="ngForm" >
-    <div class="text-center ">
-      <button class="btn btn-lg btn-facebook text-center mb-3 ">
-        <i class="fab fa-facebook-f"></i>
-        Connect With Facebook
-      </button>
-    </div>
-    <div class="text-center">
-      <hr class="hr-text" data-content="OR">
+      <form action="" #form="ngForm">
+        <div class="text-center ">
+          <button class="btn btn-lg btn-facebook text-center mb-3 ">
+            <i class="fab fa-facebook-f"></i>
+            Connect With Facebook
+          </button>
+        </div>
+        <div class="text-center">
+          <hr class="hr-text" data-content="OR">
 
-    </div>
-    <div class="form-group row">
-      <label for="inputname" class="col-sm-4 col-form-label">
-        Your Name
-        <sup class="text-danger">*</sup>
-      </label>
+        </div>
+        <div class="form-group row">
+          <label for="inputname" class="col-sm-4 col-form-label">
+            Your Name
+            <sup class="text-danger">*</sup>
+          </label>
 
-      <div class="col-sm-8">
-        <input type="text" ngModel name="fullname" #fullname="ngModel" class="form-control" id="inputname"
-          placeholder="First name and Last name" required>
-        <div class="text-danger" *ngIf="form.submitted || fullname.touched && fullname.invalid">
-          <div *ngIf="fullname.errors['required']">
-            Full Name is required
+          <div class="col-sm-8">
+            <input type="text" ngModel name="fullname" #fullname="ngModel" class="form-control" id="inputname"
+              placeholder="First name and Last name" required>
+            <div class="text-danger" *ngIf="form.submitted || fullname.touched && fullname.invalid">
+              <div *ngIf="fullname.errors['required']">
+                Full Name is required
+              </div>
+            </div>
           </div>
-        </div>
-      </div>
 
-    </div> <!-- full name -->
-    <div class="form-group row">
-      <label for="inputmobile" class="col-sm-4 col-form-label">
-        Mobile Number
-        <sup class="text-danger">*</sup>
-      </label>
-      <div class="col-sm-8">
-        <input type="text" ngModel name="number" #number="ngModel" class="form-control" id="inputmobile"
-          placeholder="Mobile Number" required minlength="11" maxlength="11">
-        <div class="text-danger" *ngIf="form.submitted || number.touched && number.invalid">
-          <div *ngIf="number.errors['required']"> Mobile Number is required</div>
-          <div *ngIf="number.errors['minlength']"> Invalid Mobile Number</div>
-          <div *ngIf="number.errors['maxlength']"> Invalid Mobile Number</div>
+        </div> <!-- full name -->
+        <div class="form-group row">
+          <label for="inputmobile" class="col-sm-4 col-form-label">
+            Mobile Number
+            <sup class="text-danger">*</sup>
+          </label>
+          <div class="col-sm-8">
+            <input type="text" ngModel name="number" #number="ngModel" class="form-control" id="inputmobile"
+              placeholder="Mobile Number" required minlength="11" maxlength="11">
+            <div class="text-danger" *ngIf="form.submitted || number.touched && number.invalid">
+              <div *ngIf="number.errors['required']"> Mobile Number is required</div>
+              <div *ngIf="number.errors['minlength']"> Invalid Mobile Number</div>
+              <div *ngIf="number.errors['maxlength']"> Invalid Mobile Number</div>
+
+            </div>
+          </div>
+        </div> <!-- mobile number -->
+        <div class="form-group row">
+          <label for="inputemail" class="col-sm-4 col-form-label">
+            Email Address
+            <sup class="text-danger">*</sup>
+          </label>
+          <div class="col-sm-8">
+            <input type="email" ngModel name="email" #email="ngModel" class="form-control" id="inputemail"
+              placeholder="example@domain.com" required [pattern]="emailRegex">
+            <div class="text-danger" *ngIf='form.submitted || email.touched && email.invalid'>
+              <div *ngIf="email.errors['required']"> Email Address is required</div>
+              <div *ngIf="email.errors['pattern']">Invalid Email Address </div>
+            </div>
+          </div>
+        </div> <!-- email -->
+        <div class="form-group row">
+          <label for="inputPassword3" class="col-sm-4 col-form-label">
+            Password
+            <sup class="text-danger">*</sup>
+          </label>
+          <div class="col-sm-8">
+            <input type="password" ngModel name="password" #password="ngModel" class="form-control" id="inputPassword3"
+              placeholder="Password" required>
+            <div class="text-danger" *ngIf='form.submitted || password.touched && password.invalid'>
+              <div *ngIf="password.errors['required']"> Password is required</div>
+            </div>
+          </div>
+        </div> <!-- password -->
+        <div class="form-group row">
+          <div class=col-sm-4></div>
+          <div class="col-sm-8">
+            <button type="submit" class="btn btn-danger" value="join" (click)="join()">
+              Join Now
+            </button>
+          </div>
+          <!-- for test -->
+          <div id="input-container">
+
+            <input type="text" placeholder="enter your name" class="" name="" id="">
+            <i class="fa fa-user"></i>
+          </div>
+          <div class="form-group ico">
+            <input type="text" placeholder="enter your name" class="form-control">
+
+          </div>
+          <!--  -->
+        </div> <!-- submit-->
+        <hr class="hr-text">
+        <div class="text-center d-flex justify-content-center">
+          <p class="text-muted mr-2">Already Registered in VetZone ?</p>
+          <a [routerLink]="'/Clogin'">login</a>
 
         </div>
-      </div>
-    </div> <!-- mobile number -->
-    <div class="form-group row">
-      <label for="inputemail" class="col-sm-4 col-form-label">
-          Email Address
-          <sup class="text-danger">*</sup>
-        </label>
-      <div class="col-sm-8">
-        <input type="email" ngModel name="email" #email="ngModel" class="form-control" id="inputemail"
-          placeholder="example@domain.com" required [pattern]="emailRegex">
-        <div class="text-danger" *ngIf='form.submitted || email.touched && email.invalid'>
-          <div *ngIf="email.errors['required']"> Email Address is required</div>
-          <div *ngIf="email.errors['pattern']">Invalid Email Address</div>
-        </div>
-      </div>
-    </div> <!-- email -->
-    <div class="form-group row">
-      <label for="inputPassword3" class="col-sm-4 col-form-label">
-          Password
-          <sup class="text-danger">*</sup>
-        </label>
-      <div class="col-sm-8">
-        <input type="password" ngModel name="password" #password="ngModel" class="form-control" id="inputPassword3"
-          placeholder="Password" required>
-        <div class="text-danger" *ngIf='form.submitted || password.touched && password.invalid'>
-          <div *ngIf="password.errors['required']"> Password is required</div>
-        </div>
-      </div>
-    </div> <!-- password -->
-    <div class="form-group row">
-        <div class=col-sm-4></div>
-      <div class="col-sm-8">
-        <button type="submit" class="btn btn-danger" value="join" (click)="join()" >
-            Join Now
-        </button>
-      </div>
-    </div> <!-- submit-->
-    <hr class="hr-text">
-    <div class="text-center d-flex justify-content-center">
-        <p class="text-muted mr-2">Already Registered in VetZone ?</p>
-       <a [routerLink]="'/Clogin'" >login</a>
-        
-    </div>
 
-  
 
-  </form>
-</div> <!-- card-body-form -->
-</div>
+
+      </form>
+    </div> <!-- card-body-form -->
+  </div>
 
 
 
