--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -108,6 +108,12 @@
     </div> <!-- card-body-form -->
   </div>
 
+            </form>
+        </div>
+        <!-- card-body-form -->
+    </div>
 
 
-</div> <!-- sign up-->
+
+</div>
+<!-- sign up-->
