--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -8,7 +8,8 @@
             <form action="" #form="ngForm">
                 <div class="text-center ">
                     <button class="btn btn-lg btn-facebook text-center mb-3 ">
-            <i class="fab fa-facebook-f"></i>
+                      <i class="fa fa-facebook" aria-hidden="true"></i>
+
             Connect With Facebook
           </button>
                 </div>
