Added all the changes to master

--- a/src/app/clogin/clogin.component.css
+++ b/src/app/clogin/clogin.component.css
@@ -1,72 +1,86 @@
-.text-danger{
-  text-align: center;
-  margin: 50px 0 auto
+.text-danger {
+    text-align: center;
+    margin: 50px 0 auto
 }
 
-.card{
-  width: 600px;
-  height: auto;
-  box-sizing: border-box;
-  position: block;
-  margin: 50px 400px auto 400px;
-  color: fuchsia;
-  background-color: blueviolet
+.card {
+    width: 600px;
+    height: auto;
+    box-sizing: border-box;
+    position: relative;
+    display: block;
+    margin: 50px auto;
+    color: fuchsia;
+    box-shadow: 2px 2px rgb(209, 209, 209);
+    background-color: blueviolet
 }
 
-.card > .container{
-  font-family: 'Roboto', sans-serif;
-  font-weight: lighter;
-  margin: 0 auto;
-  width: 500px;
-  height: auto
+.card>.container {
+    font-family: 'Roboto', sans-serif;
+    font-weight: lighter;
+    margin: 0 auto;
+    width: 500px;
+    height: auto
 }
 
-.card .container .card-title{
-  text-align: center;
-  margin-top: 60px;
-  font-size: 40px
+.card .container .card-title {
+    text-align: center;
+    margin-top: 60px;
+    font-size: 40px
 }
 
-.card > .container > form{
-  width: 350px;
-  padding: 50px 75px 30px 75px
+.card>.container>form {
+    width: 350px;
+    padding: 50px 75px 30px 75px
 }
 
-.card .container form input{
-  margin: 0 20px;
-  height: 30px;
-  width: 140%
+.card .container form label {
+    width: 130px
 }
 
-.custom-control-label{
-  color: gold
+.card .container form input {
+    margin: 0 10px;
+    height: 30px;
+    width: 150%
 }
 
-.col-sm-1-12{
-  width: 300px
+.card .container form input[type=text] {
+    color: fuchsia
 }
 
-button{
-  text-align: center;
-  width: 125px;
-  border-radius: 30px 30px;
-  margin-left: 30%;
-  margin-bottom: 0 auto;
-  background-color: gold;
-  color: blueviolet
+.card .container form input[type=password] {
+    color: gold
 }
 
-.signpara{
-  color: fuchsia;
-  width: 400px
+.custom-control-label {
+    color: gold
 }
 
-.signlink{
-  color: gold;
-  text-decoration: none
+.col-sm-1-12 {
+    width: 200px
 }
 
-.alert alert-danger{
-  text-align: center;
-  margin: 0 auto
+button {
+    text-align: center;
+    width: 125px;
+    border-radius: 30px 30px;
+    margin-left: 30%;
+    margin-bottom: 0 auto;
+    background-color: fuchsia;
+    color: blueviolet
+}
+
+.signpara {
+    color: fuchsia;
+    width: 400px
+}
+
+.signlink {
+    color: fuchsia;
+    text-decoration: none
+}
+
+.alert alert-danger {
+    text-align: center;
+    margin: 0 auto
 }
