change in sign up

--- a/src/app/sign-up/sign-up.component.css
+++ b/src/app/sign-up/sign-up.component.css
@@ -98,3 +98,6 @@
    .form-control.ng-touched.ng-invalid {
      border: 1px solid red;
    }
+   .invalied-textbox{
+    border: 1px solid red;
+   }
