--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -5,15 +5,15 @@
      <h4 class=text> Sign Up</h4>
     </div>
    
-      <form action="" #form="ngForm">
+      <form action="" #signupform="ngForm"  (ngSubmit)="signupform.valid && onSubmit(signupform)">
       
         <div class="form-group row">
           <div class="col-md-8 col-sm-10 offset-md-2 offset-sm-1 " id="input-container">
             <input type="text" ngModel name="fullname" #fullname="ngModel" class="form-control" id="inputname"
-              placeholder="Username" required>
+              placeholder="Username" required  >
               <i class="fa fa-user"></i>
 
-            <div class="text-danger" *ngIf="form.submitted || fullname.touched && fullname.invalid">
+            <div class="text-danger" *ngIf=" (fullname.touched || signupform.submitted ) && fullname.invalid">
               <div *ngIf="fullname.errors['required']">
                 Full Name is required
               </div>
@@ -30,7 +30,7 @@
               placeholder="Mobile Number" required minlength="11" maxlength="11">
               <i class="fa fa-phone"></i>
 
-            <div class="text-danger" *ngIf="form.submitted || number.touched && number.invalid">
+            <div class="text-danger" *ngIf="(number.touched || signupform.submitted )&& number.invalid">
               <div *ngIf="number.errors['required']"> Mobile Number is required</div>
               <div *ngIf="number.errors['minlength']"> Invalid Mobile Number</div>
               <div *ngIf="number.errors['maxlength']"> Invalid Mobile Number</div>
@@ -45,7 +45,7 @@
             <input type="email" ngModel name="email" #email="ngModel" class="form-control" id="inputemail"
               placeholder="Email" required [pattern]="emailRegex">
               <i class="fa fa-envelope"></i>
-            <div class="text-danger" *ngIf='form.submitted || email.touched && email.invalid'>
+            <div class="text-danger" *ngIf='(signupform.submitted || email.touched) && email.invalid'>
               <div *ngIf="email.errors['required']"> Email Address is required</div>
               <div *ngIf="email.errors['pattern']">Invalid Email Address </div>
             </div>
@@ -58,7 +58,7 @@
             <input type="password" ngModel name="password" #password="ngModel" class="form-control" id="inputPassword3"
               placeholder="Password" required>
               <i class=" fa fa-lock"></i>
-            <div class="text-danger" *ngIf='form.submitted || password.touched && password.invalid'>
+            <div class="text-danger" *ngIf='(signupform.submitted || password.touched) && password.invalid'>
               <div *ngIf="password.errors['required']"> Password is required</div>
             </div>
           </div>
@@ -67,18 +67,22 @@
         <div class="form-group row">
          
           <div class="col-md-8 col-sm-10 offset-md-2 offset-sm-1 " id="input-container">
-            <input type="password" ngModel name="password2" #password2="ngModel" class="form-control" id="inputPassword"
-              placeholder="Confirm password" required>
+            <input type="password" ngModel name="confirmpassword" #confirmpassword="ngModel" class="form-control" id="inputPassword"
+              placeholder="Confirm password" required pattern="{{ password.value }}">
               <i class=" fa fa-lock"></i>
-            <div class="text-danger" *ngIf='form.submitted || password2.touched && password2.invalid'>
-              <div *ngIf="password.errors['required']">confirm Password is required</div>
+            <div class="text-danger" *ngIf='confirmpassword.invalid && (signupform.submitted || confirmpassword.touched) '>
+              <div *ngIf="confirmpassword.errors['required']">confirm Password is required</div>
+              <div *ngIf="confirmpassword.errors['pattern']"> Password & Confirm Password do not match.
             </div>
           </div>
+        </div>
         </div> <!-- confirm password -->
         <div class="form-group row">
          
           <div class=" col-md-8 col-sm-10 offset-md-2 offset-sm-1 ">
-            <button type="submit" class="btn btn1 btn-block my-3  " value="join" (click)="join()" [disabled]="form.invalid" >
+            <button type="submit" class="btn btn1 btn-block my-3  " value="join" (click)="join()"  >
+              
+
               Sign Up
             </button>
           </div>
@@ -105,6 +109,7 @@
 
 
 
+      
       </form>
    
 
