--- a/src/app/core/head/head.component.html
+++ b/src/app/core/head/head.component.html
@@ -1,1 +1,104 @@
-<img src="{{headerURL}}" alt="" class="w-100 h-auto">
+<div class="header" *ngIf="checkPage()">
+<header class="py-5">
+        <div class="container">
+    
+          <div class="row text-white p-5">
+            <div class="col-lg-7 col-md-10 col-sm-12">
+              <h1 class="pt-5 pb-2 display-4">No need to worry about finding a vet anymore</h1>
+              <h3 class=" p-5 pb-2">Book Online <i class="fa fa-check-square"></i></h3>
+            </div>
+          </div>
+        </div>
+      </header>
+    
+      <!-- bar -->
+      <section class="bar">
+        
+          <div class="container">
+          <div class="hero bg-white shadow-lg rounded-pill">
+            <form action="" class="form-inline p-4">
+                <div class="dropdown m-auto">
+                    <button class="btn rounded-pill border-primary  btn-lg px-4" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      City <i class="fa fa-angle-down ml-5"></i>
+                    </button>
+                  
+                    <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                      <a class="dropdown-item" href="#">Cairo</a>
+                      <a class="dropdown-item" href="#">Giza</a>
+                      <a class="dropdown-item" href="#">El Dakahlia</a>
+                    </div>
+                </div>
+                <div class="dropdown m-auto">
+                    <button class="btn rounded-pill border-primary  fill btn-lg px-4" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      Area <i class="fa fa-angle-down ml-5"></i>
+                    </button>
+                  
+                    <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                      <a class="dropdown-item" href="#">Cairo</a>
+                      <a class="dropdown-item" href="#">Giza</a>
+                      <a class="dropdown-item" href="#">El Dakahlia</a>
+                    </div>
+                </div>
+                <div class=" m-auto">
+                <input class="btn rounded-pill border-primary btn-lg" type="search" placeholder="OR Vet's Name"></div>
+                <div class="m-auto">
+                <!-- <button class="btn btn-lg rounded-pill b-search">Search</button> -->
+                <input class="btn rounded-pill bg-bgge btn-lg px-5" type="submit" placeholder="Search"></div>
+    
+              
+              
+            </form>
+          </div>
+        </div>
+      </section>
+    
+    <!-- How To Book -->
+    <section class="How-To-Book p-5 mt-5">
+      <div class="container">
+        <div class="row p-5">
+          <div class="col-md-5 text-dark text-center my-5">
+            <h2 class="py-5 text-bgge">Let us know</h2>
+            <h5>How To Book <br> with Vetzone?</h5>
+          </div>
+    
+          <div class="col-md-7">
+            <div class="row col-sm-12">
+              <div class="col-sm-3 text-center my-5">
+                <img src="../../../assets/images/loupe.png" style="width: 50px; height: auto;" alt="">
+              </div>
+    
+              <div class="col-sm-9 text-dark my-4">
+                <h3>Search</h3>
+                <p>By Specialty, area,doctor name or Fees</p>
+              </div>
+            </div>
+    
+    
+            <div class="row col-sm-12">
+              <div class="col-sm-3 text-center my-5">
+                <img src="../../../assets/images/collaboration.png" style="width: 50px; height: auto;" alt="">
+              </div>
+              <div class="col-sm-9 text-dark my-4">
+                <h3>Compare & Choose</h3>
+                <p>Based on real patients reviews</p>
+              </div>
+            </div>
+    
+    
+            <div class="row col-sm-12">
+              <div class="col-sm-3 text-center my-5">
+                <img src="../../../assets/images/time-and-date.png" style="width: 50px; height: auto;" alt="">
+              </div>
+              <div class="col-sm-9 text-dark my-4">
+                <h3>Book your appointment</h3>
+                <p>Pay at the clinic at no extra cost</p>
+              </div>
+            </div>
+          </div> 
+    
+          
+        </div>
+      </div>
+    </section>
+    </div>
+ 
