--- a/src/app/core/navbar/navbar.component.html
+++ b/src/app/core/navbar/navbar.component.html
@@ -5,7 +5,7 @@
   </button>
 
     <div class="collapse navbar-collapse font-weight-bold" [class.show]="toggler" id="navbarsExampleDefault">
-        <ul class="navbar-nav mr-auto">
+        <ul class="navbar-nav ml-auto">
 
             <li class="nav-item">
                 <a class="nav-link text-light" routerLink="/clogin">Login</a>
@@ -17,6 +17,12 @@
             </li>
             <li class="nav-item">
                 <a class="nav-link text-light" routerLink="/info/aboutus">About Us</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link text-light" routerLink="/profile">Profile</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link text-light" routerLink="/docprofile">doc-Profile</a>
             </li>
             <!-- <ng-template #anonymousUser> -->
             <!-- </ng-template> -->
