--- a/src/app/clogin/clogin.component.css
+++ b/src/app/clogin/clogin.component.css
@@ -1,72 +1,49 @@
-.text-danger{
-  text-align: center;
-  margin: 50px 0 auto
-}
-
+  
 .card{
-  width: 600px;
-  height: auto;
+  /* border: linear-gradient(to bottom , rgb(104, 22, 255) , rgb(19, 180, 255)) 1px solid; */
+  border-radius: 20px;
+  margin: 100px auto;
+  padding: 30px;
+  display: block;
+  position: relative;
   box-sizing: border-box;
-  position: block;
-  margin: 50px 400px auto 400px;
-  color: fuchsia;
-  background-color: blueviolet
+  width: 400px;
+  height: 525px auto
 }
 
-.card > .container{
-  font-family: 'Roboto', sans-serif;
-  font-weight: lighter;
-  margin: 0 auto;
-  width: 500px;
-  height: auto
+.card .card-body .card-title{
+  /* background-color: linear-gradient(to top , rgb(104, 22, 255) , rgb(19, 180, 255)); */
+  margin-bottom: 30px;
+  font-size: 36px;
+  text-align: center
 }
 
-.card .container .card-title{
+.card .card-body .form-group .form-control{
+  padding-left: 20px;
+  border-radius: 35px
+}
+
+.card .card-body .form-row{
+  font-size: 14px
+}
+
+.card .card-body .form-row a{
+  font-style: italic
+}
+
+.card .card-body .form-group #signin ,
+ .card .card-body .form-group #facebook{
+  position: relative;
+  border-style: none;
+  color: white;
   text-align: center;
-  margin-top: 60px;
-  font-size: 40px
+  border-radius: 35px
 }
 
-.card > .container > form{
-  width: 350px;
-  padding: 50px 75px 30px 75px
+.card .card-body .form-group #signin{
+  background-color: linear-gradient(to left , rgb(104, 22, 255) , rgb(19, 180, 255))
 }
 
-.card .container form input{
-  margin: 0 20px;
-  height: 30px;
-  width: 140%
-}
-
-.custom-control-label{
-  color: gold
-}
-
-.col-sm-1-12{
-  width: 300px
-}
-
-button{
-  text-align: center;
-  width: 125px;
-  border-radius: 30px 30px;
-  margin-left: 30%;
-  margin-bottom: 0 auto;
-  background-color: gold;
-  color: blueviolet
-}
-
-.signpara{
-  color: fuchsia;
-  width: 400px
-}
-
-.signlink{
-  color: gold;
-  text-decoration: none
-}
-
-.alert alert-danger{
-  text-align: center;
-  margin: 0 auto
+.card .card-body .form-group #facebook{
+  background-color: rgba(56, 56, 146, 0.74)
 }
