--- a/src/app/core/info/info.component.html
+++ b/src/app/core/info/info.component.html
@@ -1,16 +1,19 @@
-<div class="row py-5">
-    <div class="list-group col-lg-3 col-md-3 col-sm-12 font-weight-bold">
-        <a routerLink="/info/aboutus" routerLinkActive="active" class="list-group-item">
-            <i class="fa fa-info-circle" aria-hidden="true"></i> About us</a>
-        <a routerLink="/info/contactus" routerLinkActive="active" class="list-group-item">
-            <i class="fa fa-envelope" aria-hidden="true"></i> Contact us</a>
-        <a routerLink="/info/callus" routerLinkActive="active" class="list-group-item">
-            <i class="fa fa-phone-square" aria-hidden="true"></i> Call us</a>
-        <a routerLink="/info/ourteam" routerLinkActive="active" class="list-group-item">
-            <i class="fa fa-users" aria-hidden="true"></i> Our team</a>
+<div class="container">
+        <div class="row py-5">
+                <div class="list-group col-lg-3 col-md-3 col-sm-12 font-weight-bold">
+                    <a routerLink="/info/aboutus" routerLinkActive="active" class="list-group-item">
+                        <i class="fa fa-info-circle" aria-hidden="true"></i> About us</a>
+                    <a routerLink="/info/contactus" routerLinkActive="active" class="list-group-item">
+                        <i class="fa fa-envelope" aria-hidden="true"></i> Contact us</a>
+                    <a routerLink="/info/callus" routerLinkActive="active" class="list-group-item">
+                        <i class="fa fa-phone-square" aria-hidden="true"></i> Call us</a>
+                    <a routerLink="/info/ourteam" routerLinkActive="active" class="list-group-item">
+                        <i class="fa fa-users" aria-hidden="true"></i> Our team</a>
+            
+                </div>
+                <div class="col-lg-8 col-md-8">
+                    <router-outlet></router-outlet>
+                </div>
+            </div>
 
-    </div>
-    <div class="col-lg-8 col-md-8">
-        <router-outlet></router-outlet>
-    </div>
 </div>
