--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -98,13 +98,13 @@
         <div class="col-md-8 col-sm-10 offset-md-2 offset-sm-1 mb-4   ">
           <button class="btn btn-block btn-facebook text-center ">
             <i class="fa fa-facebook-f mr-1" aria-hidden="true"></i>
-            Sign Up With Facebook
+            Continue With Facebook
           </button>
         </div>
        
         <div class="text-center mb-3 ">
           <p class="text-muted mb-0">Already Registered in VetZone ?</p>    
-          <a [routerLink]="'/Clogin'" class=" text ">LOGIN</a>
+          <a  class="text" routerLink='/clogin'>LOGIN</a>
         </div>
 
 
